Fix some to_i issues creeping up in newer ruby

--- a/samples/jekyll-template/_layouts/default.html
+++ b/samples/jekyll-template/_layouts/default.html
@@ -11,8 +11,8 @@
 {{ content }}
  
 </div>
-    <footer>
-    Give thanks to where you got this from! <a href="https://github.com/hdpatel">Hiren D. Patel</a>
+<footer>
+  Foot it.
     </footer>
  
 </body>
